# sortie-mcp

./: LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: check.yml  dependabot-auto-merge.yml  publish.yml
src/sortie_mcp/: __init__.py  db.py  models.py  runner.py  server.py
tests/: conftest.py  test_db.py  test_models.py  test_runner.py  test_server.py
