[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sortie-mcp"
version = "0.1.12"
description = "Campaign orchestration MCP server for AI agents — dependency DAGs, parallel fan-out, failure policies"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "OpenClaw Contributors" }]
keywords = ["mcp", "llm", "orchestration", "campaign", "dag", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/retospect/sortie-mcp"
Repository = "https://github.com/retospect/sortie-mcp"

[project.scripts]
sortie-mcp = "sortie_mcp.server:main"
sortie-runner = "sortie_mcp.runner:main"

[project.optional-dependencies]
all = ["sortie-mcp[embeddings]"]
embeddings = ["numpy>=1.26"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sortie_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",    # function-call-in-default-argument (fastmcp pattern)
    "E501",    # line-too-long (formatter handles what it can)
    "RUF001",  # ambiguous-unicode-character (› separator is intentional)
    "SIM108",  # if-else-block-instead-of-if-exp (readability)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B007", "E402", "F841"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
